--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap"
         rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 
@@ -49,22 +50,22 @@
             </div>
         </div>
     </header>
-    <section class="section">
+    <section class="section w-[100%] h-full">
         <div class="container">
-            <div class="section__wrapper">
-                <div class="section__wrapper-right">
+            <div class="section__wrapper my-[10px] flex-col justify-center">
+                <div class="section__wrapper-right ">
                     <div class="section__wrapper-right__top">
                         <img class="section__wrapper-right__top-img" src="./imges/tesle.logo.svg" alt="img">
                         <img class="section__wrapper-right__top-img" src="./imges/microsoft.logo.png" alt="img">
                         <img class="section__wrapper-right__top-img" src="./imges/hp.logo.svg" alt="img">
                     </div>
-                    <div class="section__wrapper-right__bottom">
+                    <div class="section__wrapper-right__bottom flex items-center">
                         <img class="section__wrapper-right__bottom-img1" src="./imges/oracle.logo.png" alt="img">
                         <img class="section__wrapper-right__bottom-img2" src="./imges/google.logo.svg" alt="">
                         <img src="./imges/nvida.svg" alt="img">
                     </div>
                 </div>
-                <div class="section__wrapper-left">
+                <div class="section__wrapper-left my-6">
                     <p class="section__wrapper-title">
                         Who we work with
                     </p>
@@ -84,8 +85,8 @@
     </section>
     <main class="main">
         <div class="container">
-            <div class="main__wrapper">
-                <div class="main__wrapper-group">
+            <div class="main__wrapper flex-wrap justify-center">
+                <div class="main__wrapper-group w-full my-5 md:w-1/2 lg:w-[350px]">
                     <img class="main__wrapper-group-img" src="./imges/Group 17 (2).svg" alt="img">
                     <h1 class="main__wrapper-title">
                         Personal Finances
@@ -95,7 +96,7 @@
                         history. Analyze reports to reconcile activities in your account.
                     </p>
                 </div>
-                <div class="main__wrapper-group">
+                <div class="main__wrapper-group w-full my-5 md:w-1/2 lg:w-[350px]">
                     <img class="main__wrapper-group-img" src="./imges/Group 17 (2).svg" alt="img">
                     <h1 class="main__wrapper-title">
                         Personal Finances
@@ -105,7 +106,7 @@
                         history. Analyze reports to reconcile activities in your account.
                     </p>
                 </div>
-                <div class="main__wrapper-group">
+                <div class="main__wrapper-group w-full my-5 md:w-1/2 lg:w-[350px]">
                     <img class="main__wrapper-group-img" src="./imges/Group 17 (2).svg" alt="img">
                     <h1 class="main__wrapper-title">
                         Personal Finances
